Java code cleanup in eclipse: * Change non static accesses to static members using declaring type * Change indirect accesses to static members to direct accesses (accesses through subtypes) * Convert control statement bodies to block * Put expressions in parentheses * Remove unused imports * Add missing '@Override' annotations * Add missing '@Override' annotations to implementations of interface methods * Add missing '@Deprecated' annotations * Remove unnecessary casts * Remove unnecessary '$NON-NLS$' tags * Organize imports * Format source code * Remove trailing white spaces on all lines * Correct indentation